test/should_not_compile/record1.sml
val _ = { a = "A", b = 2 } : { a : string };
